$Id: changelog,v 1.30 2006/08/26 11:10:26 alfred Exp $
------------------------------------------------------------------------------
v1.41r3 Aenderungen: (-->v1.41r4beta)

11.3.1996

- Bugfix      : -l - Option funktionierte bei P2HEX nicht.
- Erweiterung : P2HEX/P2BIN koennen Dateiinhalte auf andere Adressen
                verschieben.
- Erweiterung : P2HEX kann den Einsprungpunkt auch in Intel-Hex-Files
                weitergeben.
- Erweiterung : Kommentare in SHARED-Anweisungen werden in die Share-Datei
                weitergegeben.
- Aenderung   : Als Kommentarzeichen wird fuer Share-Dateien im Pascal-Modus
                (* ... *) anstelle { ... } verwendet.  Dies erlaubt es, 
                die Dateien auch fuer Modula zu verwenden und sollte fuer
                Pascal keine Nachteile mit sich bringen.  

18.3.1996

- Bugfix      : Kodierungsfehler im Z(3)80-Teil behoben:
                - MTEST
                - LD (IX/IY+n),r16
                - MULTW/MULTUW/DIVUW [HL,]IX/IY/imm16
                - LD r16,BC
- Bugfix      : Fehlermeldungen ueber fehlende/fehlerhafte Key-Datei kamen
                in der englischen Version noch auf Deutsch.

25.3.1996

- Bugfix      : Erwaehnung der -quiet sowie -alias -Optionen fehlte in der
                Online-Hilfe
- Erweiterung : 80C517 als Prozessortyp aufgenommen (+Register in STDDEF51.INC)

 9.4.1996

- Erweiterung : MELPS-7700-Teil kennt jetzt auch die 7750er-Befehlssatzer-
                weiterungen

 6.5.1996

- Bugfix      : VERSION-Variable stand noch auf 1.41r2

13.5.1996

- Erweiterung : MELPS-7700-Teil kennt jetzt auch die 7751er-Befehlssatzer-
                weiterungen.

- Bugfix      : einige haarstraeubende Nichtinitialisierungen von Variablen 
                beseitigt, die in Zusammenhang mit der Definition von Symbolen 
                in der Kommandozeile auftreten koennen.

28.5.1996

- Bugfix      : Der Z80-Teil hatte bei IX/IY-Displacements ein Byte zu frueh 