@@ -24,13 +24,16 @@ Compaq     AlphaStation XP1000     21264a         667         [64K+64K]/4M      
 Compaq     AlphaStation XP900      21264          466         [16K+16K]/2M        256         Linux 2.6.16.5    gcc 3.3.5    |   0.16s   0.09s    0.97s  381.87   0.819 [ 8. 5.2006 comp 13min]
 Digital    Pers. Workstation 433au 21164a         433         [8K+8K/96K]/???     128         Digital Unix 4.0  DEC-C 3.11   |   0.25s   0.14s    1.52s  245.48   0.567 [ 4. 8.1997]
 Digital    Pers. Workstation 433au 21164a         433         [8K+8K/96K]/2M      320         Linux 2.6.16.5    gcc 3.3.5    |   0.33s   0.16s    1.82s  200.82   0.464 [17. 5.2005 comp 25min 54sec]
+Digital    Pers. Workstation 500au 21164a         500         [8K+8K/96K]         256         Linux.2.6.16.5    gcc 3.3.5    |   0.41s   0.2s     2.07s  166.37   0.333 [12. 9.2006 comp 32min 44sec]
 Digital    AlphaStation 500/400    21164a         400         [8K+8K/96K]/2M      256         Linux 2.4.32      gcc 3.3.5    |   0.37s   0.22s    2.41s  159.11   0.398 [26.12.2005 comp 28min]
+Noname     UX164                   21164a         333         [8K+8K/96K]/2M      384         Linux 2.6.17.9    gcc 3.3.5    |   0.42s   0.21s    2.41s  154.14   0.462 [comp 32min 12sec]
 Digital    AlphaStation 500/266    21164          267         [8K+8K/96K]/2M      128         Digital Unix 4.0  DEC-C 3.11   |   0.43s   0.25s    2.76s  138.59   0.521 [ 1.11.1997]
-Noname     EB164                   21164          300         [8K+8K/96K]/2M       64         Linux 2.4.32      gcc 3.3.5    |   0.49s   0.25s    2.93s  130.45   0.434 [ 5. 8.2006 comp 55min  5sec]
+Noname     EB164                   21164          300         [8K+8K/96K]/2M       64         Linux 2.6.17.9    gcc 3.3.5    |   0.55s   0.28s    3.18s  116.31   0.388 [11. 9.2006 comp 55min 20sec]
 Digital    AlphaStation 500/266    21164          266         [8K+8K/96K]/2M      256         Linux 2.6.15.3    gcc 3.3.5    |   0.59s   0.27s    3.27s  114.35   0.430 [19. 5.2006 comp 59min 38sec]
 Digital    AlphaStation 600 5/266  21164          266         [8K+8K/96K]/2M      448         Linux 2.4.31      gcc 3.3.5    |   0.59s   0.29s    3.34s  110.99   0.417 [16.11.2005 comp 59min]
 Digital    PC164 board             21164a         500         [8K+8K/96K]/1M      128         Linux 2.1.42      gcc 2.7.2    |   0.62s   0.35s    3.51s  101.08   0.202
 Digital    AlphaStation 250 4/266  21064a         266         [16K+16K]/2M        128         Linux 2.4.32      gcc 3.3.5    |   0.97s   0.50s    5.57s   66.00   0.248 [23.12.2005 comp 94min]
+Digital    AlphaStation 255/300    21064a         300         [16K+16K]/1M        192         Linux 2.6.17.9    gcc 3.3.5    |   1.08s   0.49s    5.50s   64.92   0.216 [11. 9.2006 comp 97min 20sec]
 Aspen      Alpine                  21064a         275         [16K+16K]/2M         48         Linux 2.4.32      gcc 3.3.5    |   1.18s   0.53s    6.28s   58.62   0.213 [20. 7.2006 comp 105min 32sec]
 Digital    AlphaServer 300 4/266   21064a         266         [16K+16K]/2M        160         Linux 2.4.31      gcc 3.3.5    |   1.30s   0.61s    7.07s   51.93   0.195 [16.11.2005 comp 93min]
 Digital    AlphaStation 200 4/233  21064a         233         [16K+16K]/512K       96         Linux 2.4.32      gcc 3.3.5    |   1.44s   0.61s    6.97s   50.72   0.218 [25.12.2005 comp 127min]
