@@ -58,9 +58,12 @@
 /*           2002-03-03 use FromFile, LineRun fields in input tag            */
 /*                                                                           */
 /*****************************************************************************/
-/* $Id: as.c,v 1.13 2006/07/08 10:32:55 alfred Exp $                          */
+/* $Id: as.c,v 1.14 2006/10/10 10:41:12 alfred Exp $                          */
 /*****************************************************************************
  * $Log: as.c,v $
+ * Revision 1.14  2006/10/10 10:41:12  alfred
+ * - allocate FileMask dynamically
+ *
  * Revision 1.13  2006/07/08 10:32:55  alfred
  * - added RS08
  *
