@@ -10773,11 +10773,12 @@ Informationen bekommen, die von einem kleinen Tip bis zu ganzen
 Datenb"uchern reichen.  Hier eine Aufz"ahlung (wie oben gesagt, ohne 
 Garantie auf Vollst"andigkeit!):
 \par 
-Ernst Ahlers, Charles Altmann, Andreas Bolsch, Rolf Buchholz, Bernd Casimir,
-Gunther Ewald, Stephan Hruschka, Peter Kliegelh"ofer, Ulf Meinke,
-Matthias Paul, Norbert Rosch, Steffen Schmid, Leonhard Schneider,
-Ernst Schwab, Michael Schwingen, Oliver Sellke, Christian Stelter,
-Oliver Thamm, Thorsten Thiele, Andreas Wassatsch, John Weinrich.
+Ernst Ahlers, Charles Altmann, Len Bayles, Andreas Bolsch,
+Rolf Buchholz, Bernd Casimir, Gunther Ewald, Stephan Hruschka, Peter
+Kliegelh"ofer, Ulf Meinke, Matthias Paul, Norbert Rosch, Steffen Schmid,
+Leonhard Schneider, Ernst Schwab, Michael Schwingen, Oliver Sellke,
+Christian Stelter, Patrik Str"omdahl, Oliver Thamm, Thorsten Thiele,
+Andreas Wassatsch, John Weinrich.
 \par
 ...und ein geh"assiger Dank an Rolf-Dieter-Klein und Tobias Thiel, die
 mit ihren ASM68K demonstrierten, wie man es \bb{nicht} machen sollte und
