@@ -10469,11 +10469,12 @@ documentation.  I received information from an enormous amount of
 people, ranging from tips up to complete data books.  An enumeration
 follows (as stated before, without guarantee for completelessness!):
 
-Ernst Ahlers, Charles Altmann, Andreas Bolsch, Rolf Buchholz, Bernd Casimir,
-Gunther Ewald, Stephan Hruschka, Peter Kliegelh\"ofer, Ulf Meinke,
-Matthias Paul, Norbert Rosch, Steffen Schmid, Leonhard Schneider,
+Ernst Ahlers, Charles Altmann, Len Bayles, Andreas Bolsch, Rolf Buchholz,
+Bernd Casimir, Gunther Ewald, Stephan Hruschka, Peter Kliegelh\"ofer, Ulf
+Meinke, Matthias Paul, Norbert Rosch, Steffen Schmid, Leonhard Schneider,
 Ernst Schwab, Michael Schwingen, Oliver Sellke, Christian Stelter,
-Oliver Thamm, Thorsten Thiele, Andreas Wassatsch, John Weinrich.
+Patrik Str\"omdahl, Oliver Thamm, Thorsten Thiele, Andreas Wassatsch,
+John Weinrich.
 
 ...and an ironic ''thank you'' to Rolf-Dieter-Klein and Tobias Thiel who
 demonstrated with their ASM68K how one should \bb{not} do it and thereby
